--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,6 +1,6 @@
 html, body{
     font-family: Helvetica, sans-serif;
-    font-size:  22px;
+    font-size:  20px;
     color: seashell;
     background-color: black;
     opacity: 0.9;
@@ -16,6 +16,9 @@ html, body{
     justify-content: space-between;
     border-bottom: 1px solid seashell;
 
+}
+a {
+    color: seashell;
 }
 
 .logo img{
@@ -33,40 +36,97 @@ li{
 
 /* main */
 .main{
-border: 3px solid yellow;
-background-image: url('../images/img-mission-background.jpg');
-width: 1200px;
-height: 700px;
-margin: 0 auto;
-display: flex;
-align-items: center;
+    height: 700px;
+    width: 1200px;
+    margin: 0px auto;
+    background-image: url("../images/img-mission-background.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    
 }
 
-.main h2{
+.missionstatement{
     background-color: black;
+    margin: 0 auto;
+    width: 1200px;
+    height: auto;
 }
 
 
+/* featured */
+
+/* teaofthemonth element
+.month{
+    
+}  */
 
 .featured{
+    width: 1000px;
+    height: auto;
+    margin: 0px auto;
+    padding: 0px;
 
+}
+
+/* container */
+.gallery{
+    width: 980px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    
+}
+
+/* photos */
+.img{
+    width: 300px;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+}
+
+figcaption{
+    margin-top: 10px;
+}
+
+
+/* container */
+.loccontainer{
+    width: 1200px;
+    height: 500px;
+    margin: 0 auto;
+    background-image: url('../images/img-locations-background.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .loc{
+    width: 980px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
 }
 
-.downtown{
+/* elements */
+.address{
+    width: 300px;
+    margin-top: 15px;
+    background-color: black;
+    opacity: 1;
 
 }
 
-.east{
-
-}
-
-.oakdale {
-
-}
 
 .contact{
     height: 200px;
